# CDFSF

./: app.py  main.py  program_manager.py  pyproject.toml  run.py
programs/program1/: main.py
programs/program2/: main.py
programs/program3/: main.py
programs/program4/: main.py
static/js/: main.js
templates/: base.html  index.html
