[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "email-validator>=2.2.0",
    "emoji>=2.14.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "irc>=20.5.0",
    "millify>=0.1.1",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "pre-commit>=4.2.0",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "validators>=0.35.0",
    "websocket-client>=1.8.0",
]
